--- a/index.html
+++ b/index.html
@@ -8,23 +8,18 @@
 
 <body>
 
-<h1 class=header>Broadway Design
-<img src="resources/images/the-flatiron-building.png" alt text "The FlatIron Building">
-</h1>
-
-<div class="nav">
-  <ul>
-    <a href="#home"><li>Home</li></a>
-    <a href="#about"><li>About</li></a>
-    <a href="#work"><li>Work</li></a>
-    <a href="#team"><li>Team</li></a>
-    <a href="#contact"><li>Contact</li></a>
-  </ul>
+<div class=header>
+<h1>Broadway Design</h1>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#work">Work</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
 </div>
 
 <h2>Our Process</h2>
 
-<img src="resources/images/indentify.svg" alt text "Double Corkscrew Arrow">
+<img src="resources/images/identify.svg" alt text "Double Corkscrew Arrow">
 <h3>Indentify</h3>
 <p>We focus on the most important details.</p>
 
@@ -36,10 +31,11 @@
 <h3>Execute</h3>
 <p>We put everything we have into our work.</p>
 
-<h3 class=subhead>
+<div class=subhead>
+<h3>
   Designed in New York
-  <img src="resources/images/the-flatiron-building.png" alt text "The FlatIron Building" width=auto height=25px>
 </h3>
+</div>
 
 <h3>Portfolio</h3>
 <p>Coming Soon</p>
@@ -53,12 +49,14 @@ E-mail: test@example.com</br>
 Twitter: @test</br>
 </p>
 
-<p class=copyright>&copy; Broadway 2017 <span class=nav>
+<p class=footer>
+  &copy; Broadway 2017
   <a href="#home">Home</a>
   <a href="#about">About</a>
   <a href="#work">Work</a>
   <a href="#team">Team</a>
   <a href="#contact">Contact</a>
+</p>
 
 
 </body>
